# ttl-planning

./: .gitignore  Dockerfile  OBG_Members_Processed.csv  Procfile  README.md  analyze_frequencies.py  app.py  config.json  index.html  journey.md  main.py  migrate_to_uv.md  obgmembers.jsx  package.json  persona_optimization.py  plan_optimizer.py  planner.py  process_members.py  pyproject.toml  requirements.txt  revenue_planner.py  test_planner.py  value_calculator.py  work-log.md
api/: index.py
templates/: index.html
