[project]
name = "ttl-planning"
version = "0.1.0"
description = "Tabletop Library Planning Tools - Capacity analysis, membership optimization, and revenue modeling for tabletop game cafes"
requires-python = ">=3.10"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "pulp==2.7.0",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
